# latent-margins

./: .gitignore  .prettierignore  .prettierrc.mjs  BLOG_POSTS.md  README.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
src/components/: SignalLabGame.astro
src/content/: config.ts
src/content/blog/: technical-blog-stack.mdx
src/content/resume/: main.md
src/layouts/: ArticleLayout.astro  BaseLayout.astro
src/lib/: paths.ts  posts.ts
src/pages/: index.astro  rss.xml.js
src/pages/about/: index.astro
src/pages/blog/: [...slug].astro  index.astro
src/pages/break/: index.astro
src/pages/resume/: index.astro
src/pages/tags/: index.astro
src/styles/: global.css
tests/: test_content_validation.py
tools/blogtools/: __init__.py  cli.py  content.py
