[project]
name = "blogstack-tools"
version = "0.1.0"
description = "Python tooling for the Blogstack static technical blog."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-frontmatter>=1.1.0",
  "typer>=0.12.5",
]

[project.scripts]
blogtools = "blogtools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/blogtools"]

[dependency-groups]
dev = [
  "pyright>=1.1.409",
  "pytest>=8.3.3",
  "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["tools", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "N",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["tools", "tests"]
exclude = [
  ".venv",
  "node_modules",
  "dist",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
